会话关闭提示语

--- a/project.config.json
+++ b/project.config.json
@@ -6,7 +6,7 @@
 	"projectname": "qiyu-miniprogram-plugin",
 	"description": "",
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": false,
 		"postcss": false,
 		"minified": false,
