--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tarojs/async-await": "^1.3.2",
+    "@tarojs/async-await": "1.3.2",
     "@tarojs/components": "1.3.2",
-    "@tarojs/redux": "^1.3.2",
+    "@tarojs/redux": "1.3.2",
     "@tarojs/router": "1.3.2",
     "@tarojs/taro": "1.3.2",
     "@tarojs/taro-alipay": "1.3.2",
