--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
 	"miniprogramRoot": "miniprogram/",
 	"pluginRoot": "plugin/",
 	"compileType": "plugin",
-	"appid": "wx1f06f11c454d338d",
+	"appid": "wxae5e29812005203f",
 	"projectname": "qiyu-miniprogram-plugin",
 	"description": "",
 	"setting": {
