feat: 增加服务先知

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,7 @@
   "rules": {
     "no-unused-vars": ["error", { "varsIgnorePattern": "Taro" }],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx"] }],
-    "react/no-array-index-key": null,
+    "react/no-array-index-key": 0,
     "taro/this-props-function": null,
     "import/prefer-default-export": null,
     "no-shadow": 0,
