--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@tarojs/taro-h5": "^1.3.2",
     "@tarojs/taro-swan": "^1.3.2",
     "@tarojs/taro-tt": "^1.3.2",
-    "@tarojs/taro-weapp": "^1.3.14",
+    "@tarojs/taro-weapp": "^1.3.15",
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.15",
     "nerv-devtools": "^1.4.0",
     "nervjs": "^1.4.0",
     "redux": "^4.0.1",
