--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,7 @@
       "@/plugin/*": ["./src/plugin/*"],
       "@/components/*": ["./src/plugin/components/*"],
       "@/lib/*": ["./src/plugin/lib/*"],
-      "@/action/*": ["./src/plugin/action/*"]
+      "@/actions/*": ["./src/plugin/actions/*"]
     }
   }
 }
